--- a/build.gradle
+++ b/build.gradle
@@ -1,21 +1,22 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.6.21'
+    ext.kotlin_version = '1.9.0'
     repositories {
         google()
         mavenCentral()
     }
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-
         classpath 'com.android.tools.build:gradle:7.4.2'
-
-        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.4.2"
-
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.7.0"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
+}
+
+plugins {
+    id 'com.google.devtools.ksp' version '1.9.0-1.0.13' apply false
 }
 
 allprojects {
@@ -26,6 +27,6 @@ allprojects {
     }
 }
 
-task clean(type: Delete) {
+tasks.register('clean', Delete) {
     delete rootProject.buildDir
 }
